// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Headline component should render correctly 1`] = `
.c0 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #3F3F42;
  display: block;
  margin: 0;
  padding: 2rem 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    padding: 2.5rem 0;
  }
}

<h1
  class="c0"
>
  This is my headline.
</h1>
`;

exports[`Headline component should render correctly with arabic script typography values 1`] = `
.c0 {
  font-size: 2rem;
  line-height: 2.625rem;
  font-family: "BBC Nassim Persian",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  display: block;
  margin: 0;
  padding: 2rem 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 2.375rem;
    line-height: 2.875rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 2.75rem;
    line-height: 3.375rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    padding: 2.5rem 0;
  }
}

<h1
  class="c0"
>
  هذا هو العنوان الخاص بي
</h1>
`;

exports[`Page Heading should render correctly 1`] = `
.c0 {
  color: #6E6E73;
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

<h1
  class="c0"
  id="content"
  tabindex="-1"
>
  This is a page heading
</h1>
`;

exports[`Page Heading should render correctly with arabic script typography values 1`] = `
.c0 {
  color: #6E6E73;
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "BBC Nassim Persian",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 1.625rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 1.75rem;
    line-height: 2.25rem;
  }
}

<h1
  class="c0"
  id="content"
  tabindex="-1"
>
  هذا عنوان الصفحة
</h1>
`;

exports[`SubHeading component should render correctly 1`] = `
.c0 {
  font-size: 1.25rem;
  line-height: 1.5rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding: 1.5rem 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    padding-top: 2rem;
  }
}

<h2
  class="c0"
  tabindex="-1"
>
  This is a SubHeading
</h2>
`;

exports[`SubHeading component should render correctly with an ID 1`] = `
.c0 {
  font-size: 1.25rem;
  line-height: 1.5rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding: 1.5rem 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    padding-top: 2rem;
  }
}

<h2
  class="c0"
  id="This-is-a-SubHeading"
  tabindex="-1"
>
  This is a SubHeading
</h2>
`;

exports[`SubHeading component should render correctly with arabic script typography values 1`] = `
.c0 {
  font-size: 1.5rem;
  line-height: 2.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding: 1.5rem 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 2rem;
    line-height: 2.375rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 2.25rem;
    line-height: 3.125rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    padding-top: 2rem;
  }
}

<h2
  class="c0"
  tabindex="-1"
>
  هذا عنوان فرعي
</h2>
`;
